tests/ui/hygiene/no_implicit_prelude.stderr
error[E0433]: failed to resolve: use of undeclared type `Vec`
  --> $DIR/no_implicit_prelude.rs:11:9
   |
LL |       fn f() { ::bar::m!(); }
   |                ----------- in this macro invocation
...
LL | /     pub macro m() {
LL | |         Vec::new();
   | |         ^^^ use of undeclared type `Vec`
LL | |         ().clone()
LL | |     }
   | |_____- in this expansion of `::bar::m!`
   |
help: consider importing this struct
   |
LL +     use std::vec::Vec;
   |

error[E0599]: no method named `clone` found for unit type `()` in the current scope
  --> $DIR/no_implicit_prelude.rs:12:12
   |
LL |       fn f() { ::bar::m!(); }
   |                ----------- in this macro invocation
...
LL | /     pub macro m() {
LL | |         Vec::new();
LL | |         ().clone()
   | |            ^^^^^ method not found in `()`
LL | |     }
   | |_____- in this expansion of `::bar::m!`
   |
   = help: items from traits can only be used if the trait is in scope
help: the following trait is implemented but not in scope; perhaps add a `use` for it:
   |
LL +     use std::clone::Clone;
   |

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0433, E0599.
For more information about an error, try `rustc --explain E0433`.
